# libepoxy

./: CMakeLists.txt  cmake-config.h.in
src/: CMakeLists.txt  dispatch_common.c  dispatch_wgl.c
